syntax = "proto3";
package protos.connectors;

import "google/protobuf/wrappers.proto";
import "protos/base.proto";

message OpenSearchIndexAssetModel {
  google.protobuf.StringValue index = 1;
}

message OpenSearchIndexAssetOptions {
  repeated string indexes = 1;
}

message OpenSearchAssetModel {
  google.protobuf.UInt64Value id = 1;
  Source connector_type = 2;
  SourceModelType type = 3;
  sfixed64 last_updated = 4;
  oneof asset {
    OpenSearchIndexAssetModel open_search_index = 5;
  }
}

message OpenSearchAssets {
  repeated OpenSearchAssetModel assets = 1;
}